--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
             <h2 id="title">Highway</h2>
             <h3 id="artist">MSG</h3>
             <div class="img_container">
-                <img src="images/headphones1.jpg" alt="cd image">
+                <img src="images/headphones-solid.svg" alt="cd image">
+                <!-- <img src="<i class="fas fa-headphones"></i>" > -->
             </div>
 
             <audio src="music/music-1.mp3"></audio>
