image not showing

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <h2 id="title">Highway</h2>
             <h3 id="artist">MSG</h3>
             <div class="img_container">
-                <img src="images/headphones-solid.svg" alt="cd image">
+                <img src="headphones-solid.svg" alt="cd image">
                 <!-- <img src="<i class="fas fa-headphones"></i>" > -->
             </div>
 
